# sketch-terminator2

./: .gitignore  CMakeLists.txt  package.xml
config/: .env.example  calib_config.yaml  camera_calibration_params.yaml  camera_params.yaml  logitech_calib.yaml  vision_config.yaml
controllers/: controllers.yaml
gui/: dashboard.py
launch/: camera_calib.launch.py  camera_world.launch.py  master_robot.launch.py  prarob_manipulator.launch.py  vision_launch.py
meshes/: DC11_A01_CASE_CVR_DUMMY.stl  DC11_A01_DUMMY_1.stl  DC11_A01_IDLER_SCREW.stl  DX124_SCREW-COVER.stl  Dynamixel Motor.stl  FHS_M2_5X10.stl  Link 90.stl  Link_90_1.stl  Long Link.stl  Long_Link_1.stl  Long_Link_2.stl  Marker.stl  Pen Holder Holder.stl  Pen Holder Stopper.stl  Pen Holder.stl  Pen u Pen Holderu u Pen Holder Holderu.stl  Pen_Holder.stl  Pen_Holder_Holder.stl  Pen_Holder_Stopper.stl  base_link.stl
prarob_calib/: camera_to_world.py
rviz/: prarob_manipulator.rviz
scripts/: camera_to_world.py
sketch-terminator2/: agent.py  agent_node.py  generate_smooth_path.py  kinematics.py  kinematika.py  move_robot.py  path_planner_node.py  ros2_introspection.py  tools.py  yolo_node.py  yolo_workspace_processing_node.py
urdf/: materials.xacro  sketch_terminator.ros2_control.xacro  sketch_terminator.urdf.xacro  sketch_terminator.xacro
